k8s/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: us-law-severity-map
  labels:
    name: us-law-severity-map
    app: us-law-severity-map
